<resources>
    <string name="app_name">FunnySoundsApp</string>
    <string name="continueString">Continue</string>
    <string name="passwordHintField">Enter your password</string>
    <string name="usernameHintField">Enter your username</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign up</string>
    <string name="noAccountTextView">Don\'t have an account?</string>
    <string name="usernameRegister">Enter your username</string>
    <string name="passwordRegister">Enter your password</string>
    <string name="passwordRepeatRegister">Repeat your password</string>
    <string name="signUpRegister">Sign up</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">ZV5v3Kto8OJ42aGKW9wA6LbCJI7S7SDAFhK5RBHU</string>
    <string name="back4app_client_key">a3LZCq9yxw4Zy03Snu3ypdUKw0bkMyDO17F4gy9I</string>
    <string name="go_back">Go back</string>
    <string name="mediaPlayerPlay">Play</string>
    <string name="mediaPlayerPause">Pause</string>
</resources>